fix: fixed some extra white space around list items

--- a/app/scss/_carousel.scss
+++ b/app/scss/_carousel.scss
@@ -4,6 +4,10 @@
     background-image: url("/images/pattern-bg.svg");
     background-repeat: no-repeat;
     background-size: contain;
+
+    @include breakpoint-up(medium) {
+      padding: rem(63px) rem(92px) rem(54px) rem(73px);
+    }
   }
 
   &-img {
