--- a/app/scss/_globals.scss
+++ b/app/scss/_globals.scss
@@ -27,6 +27,8 @@ body {
 
 ol {
   list-style-type: none;
+  line-height: 0;
+  float: left;
 }
 
 .site-container {
