--- a/app/scss/_layout.scss
+++ b/app/scss/_layout.scss
@@ -23,7 +23,11 @@
   &img-block {
     position: relative;
     margin-bottom: rem(50.5px);
-    flex: 1;
+    flex: 1 0 min-content;
+
+    @include breakpoint-up(medium) {
+      margin-bottom: 0;
+    }
   }
 
   &text-block {
